--- a/untitled.ui
+++ b/untitled.ui
@@ -18,10 +18,23 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
+      <y>49</y>
       <width>660</width>
-      <height>370</height>
+      <height>331</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>добавить</string>
     </property>
    </widget>
   </widget>
